--- a/flaskapp/static/css/printstyles.css
+++ b/flaskapp/static/css/printstyles.css
@@ -48,7 +48,11 @@
         h2, h3, h4, h5 {
                     font-size: 14pt;
                     margin-top: 5px;
+                    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
                     }
+        p{
+            font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+        }
         .printclass p {
             margin-top: 0;
             font-size: 12pt;
