--- a/flaskapp/templates/report-visitors.html
+++ b/flaskapp/templates/report-visitors.html
@@ -118,7 +118,7 @@
                                     
                                     <th>Entry date</th>
                                     <th>Visitor Name</th>
-                                    <th>Extra</th>
+                                  
                                     <th>Contact Number</th>
                                     <th>Visitor Company</th>
                                     <th>Visiting Person</th>
@@ -136,8 +136,13 @@
                                 <tr>
                                     
                                     <td>{{vi.date.strftime('%d-%m-%Y')}}</td>
+
+                                    {% if vi.extras %}
+                                    <td>{{vi.a_timelog.name.title()}}+{{vi.extras}}</td>
+                                    {% else %}
                                     <td>{{vi.a_timelog.name.title()}}</td>
-                                    <td>{{vi.extras}}</td>
+                                    {% endif %}
+                                    
                                     <td>{{vi.a_timelog.contact}}</td>
                                     <td>{{vi.a_timelog.place_from.title()}}</td>
                                     {% if vi.active.visited_dept.department_name == None %}
@@ -176,7 +181,7 @@
                                     
                                     <th>Entry date</th>
                                     <th>Visitor Name</th>
-                                    <th>Extra</th>
+                                   
                                     <th>Contact Number</th>
                                     <th>Visitor Company</th>
                                     <th>Visiting Department</th>
