--- a/flaskapp/templates/dataentry-visitors.html
+++ b/flaskapp/templates/dataentry-visitors.html
@@ -56,7 +56,7 @@ Visitor Data Entry
                         <div class="form-row form-group mb-2 ">
                                 <label class="col-form-label" for="entrydate">Date:</label>
                                 
-                                        <input type="date" class="form-control" id="date" name="entrydate" value="2019-11-27" autofocus="" required="">
+                                        <input type="date" class="form-control" id="date" name="entrydate" value="{{today_date}}" autofocus="" required="">
                                 
                             </div>
         
@@ -111,7 +111,7 @@ Visitor Data Entry
                                 
                                 <label class="col-form-label" for="intime">In Time:</label>
                                
-                                        <input name="intime" class="form-control" type="time" value="10:31">
+                                        <input name="intime" class="form-control" type="time" value="{{today_time}}">
                                 
                             </div>
                        
@@ -143,11 +143,10 @@ Visitor Data Entry
                             {% for visitor in today_visitors %}
                             <tr id="datasection{{visitor.id}}">
                                 <td class=""></td>
-                                <td>{{visitor.a_timelog.name.title()}}</td>
                                 {% if visitor.extras == 0 or None %}
-                                    <td>{{visitor.extras}}</td>
+                                <td>{{visitor.a_timelog.name.title()}}</td>
                                 {% else %}
-                                    <td>+{{visitor.extras}}</td>
+                                <td>{{visitor.a_timelog.name.title()}}+{{visitor.extras}}</td>
                                 {% endif %}
                                 <td>{{visitor.a_timelog.contact}}</td>
                                 <td>{{visitor.a_timelog.place_from.title()}}</td>
@@ -195,6 +194,18 @@ Visitor Data Entry
 
 
 {% block script %}
+
+    <script>
+      
+        $(document).ready(function(){
+            var d = Date.now()
+            var date = d.getDate()
+
+            alert(date)
+        });
+    </script>
+
+
     <script>
         $('input[name=visitorname]').focusout(function(){
           
