New Visitor Frequency

--- a/flaskapp/templates/report-visitors-print.html
+++ b/flaskapp/templates/report-visitors-print.html
@@ -95,7 +95,7 @@
                                             {% if vi.a_timelog.visiting_department == None   %}
                                             <td>None</td>
                                             {% else %}
-                                            <td>{{vi.active.visited_dept.department_name.title()}}</td>
+                                            <td>{{vi.active.visited_dept.department_name}}</td>
                                             {% endif %}
 
 
