--- a/flaskapp/templates/report-visitors.html
+++ b/flaskapp/templates/report-visitors.html
@@ -211,7 +211,7 @@
 <script type="text/javascript">
     $(document).ready(function() {
         var t = $('#all-visitoreport').DataTable({
-            scrollY :500
+           "order" : [[0, 'desc']]
             
         });
 
