--- a/flaskapp/templates/test-dashboard.html
+++ b/flaskapp/templates/test-dashboard.html
@@ -134,7 +134,7 @@
                 <img class="mr-3" src="{{url_for('static', filename='images/favicon.png')}}" />Visitor Management System</p>
               <form id="navbarSearchForm" class="navbar-form form-row  justify-content-center" role="search" action="{{url_for('search.search_main')}}">
                 <div class="col-md-5 col-sm-4">
-                    <div class="shadow input-group">
+                    <div class="shadow input-group">   
                         <div class="input-group-prepend"> 
                         </div> 
                         <input aria-describedby="searchicon" style="text-transform: uppercase;" name="text-search" type="text" class="form-control rounded" placeholder="Search By Name, Phone No, Vehicle No">
@@ -258,23 +258,29 @@
                 </h3>
                 <ul data-parent="#sidenav-styles" id="report-links" class=" collapse nav flex-column mb-2">
                     <li class="hvr-underline-from-center nav-item">
-                        <a class="nav-link" href="{{url_for('report.report_main')}}">
+                        <a class=" nav-link" href="{{url_for('report.report_main')}}">
                             <span style="font-size: 1rem;" data-feather="file-text">Visitors</span>
-
+                            
                         </a>
+                       
                     </li>
-                    <li class=" nav-item">
+                    <ul class=" nav-item m-3">
+                        <li class=" text-white "><a href="{{url_for('report.frequent_visitor')}}" class="text-white">Frequent</a></li>
+                    </ul>
+
+                    <li class="hvr-underline-from-center nav-item">
                         <a class="nav-link" href="{{url_for('report.report_vehicles')}}">
                             <span style="font-size: 1rem;" data-feather="file-text">Vehicles</span>
 
                         </a>
-                        <ul>
-                            <li class="nav-item"><a class="nav-link" href="{{url_for('report.report_vehicles')}}"
-                                    style="color: white;">Outside Vehicles</a></li>
-                            <li class="nav-item"><a class="nav-link" href="{{url_for('report.mill_report')}}"
-                                    style="color: white;">Mill Vehicles</a></li>
-                        </ul>
                     </li>
+
+                    <ul class="text-white">
+                        <li class=""><a class="text-white" href="{{url_for('report.report_vehicles')}}"
+                               ">Outside </a></li>
+                        <li class=" "><a class="text-white" href="{{url_for('report.mill_report')}}"
+                                ">Mill </a></li>
+                    </ul>
                 </ul>
                 <h3
                     class="hvr-sweep-to-bottom sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
@@ -328,6 +334,7 @@
                 {% endfor %}
                 {% endif %}
                 {% endwith %}
+                
                 <div style="margin: 2px; border-bottom: black;" class="">
                     <h1 class="h2 mb-4 text-center">{% block title %}Main Page{% endblock %}{% block linktitle%}
                         {% endblock %}</h1>
